ind vs ban match added, commentry overlap fix

--- a/src/components/scorePage/Commentary/CommentaryBox.module.css
+++ b/src/components/scorePage/Commentary/CommentaryBox.module.css
@@ -1,7 +1,9 @@
 .container {
   display: flex;
   width: 62rem;
-  height: 8rem;
+  height: fit-content;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   /* background-color: aqua; */
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
