--- a/src/components/scores/NavBarTertiary.module.css
+++ b/src/components/scores/NavBarTertiary.module.css
@@ -6,6 +6,10 @@
   margin-top: 2rem;
 }
 
+.commentaryList {
+  margin-top: 2rem;
+}
+
 .containerMainLiveScore {
   max-width: 1040px;
   margin: 0 auto;
